k8s-training/client-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v1


---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec: 
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
