k8s-training/server-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dpl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: server
  template:
    metadata:
      name: server-pod
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: laithharb/server:v1

---

apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec: 
  type: NodePort
  selector:
    app: server
  ports:
    - port: 3200
      targetPort: 3000
      nodePort: 30008
